--- a/www/index.html
+++ b/www/index.html
@@ -110,7 +110,12 @@
 				<h3> Groeten uit Griekenland!</h3>
 				<h4>Kom je ook hier vakantie vieren</h4>
 			</section>
-			
+							<hr>
+			<h3>Opdracht 8</h3>
+				<section class="opdracht8">
+				<h4>BBRRRR.... </h4>
+				<p>Super koud man oh God...</p>
+			</section>
 		</div>
 
 
