--- a/www/index.html
+++ b/www/index.html
@@ -110,13 +110,34 @@
 				<h3> Groeten uit Griekenland!</h3>
 				<h4>Kom je ook hier vakantie vieren</h4>
 			</section>
-							<hr>
+			<hr>
+
 			<h3>Opdracht 8</h3>
 				<section class="opdracht8">
 				<h4>BBRRRR.... </h4>
 				<p>Super koud man oh God...</p>
 			</section>
-			<h5 class="under">text</h5>
+			<div class="under">
+			<h5>text</h5>
+			</div>
+		</div>
+		<hr>
+		<div id="pseudoElements">
+				<section>
+					<p> This is a Pseudo element effect. </p>
+				</section>
+		</div>
+		<div class="grammar">
+			
+			<p>this is cjeck the graammar errro. pseudo ::grammar-error werkt niet browser support.</p>
+			<div>
+			<h3>Creating borders</h3>
+			<h4 class="corner-border bottom-corner">Borders</h4>
+ 			</div>
+		</div>
+
+
+
 		</div>
 
 
