--- a/www/index.html
+++ b/www/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<base href="">
+<base href="www.">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, minimum-scale=2.0, user-scale=yes">
 
 <head>
-	<title> CSS Selectors</title>
+	<title> Home | CSS Selectors</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	
-	<header></header>
 	<main>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="pages/pseudo.html">Pseudo</a></li>
+				<li><a href="pages/Flexbox.html">FlexBox</a></li>
+				<li><a href="pages/grid.html">Grid</a></li>
+			</ul>
+		</nav>
+	</header>
+	
 		<section>
 			<h1>Antworden op vragen handout CSS</h1>
 			<p>
