--- a/www/pages/transitions.html
+++ b/www/pages/transitions.html
@@ -22,8 +22,13 @@
 		</header>
 
 		<h1>Tranisiotns opdrachten </h1>
-		<section>
-	
+		<section class="container">
+	 <div class="box1"><p class="bar">1</p></div>
+   <div class="box2"><p class="bar">2</p></div>
+   <div class="box3"><p class="bar">3</p></div>
+   <div class="box4"><p class="bar">4</p></div>
+   <div class="box5"><p class="bar">5</p></div>
+   <div class="box6"><p class="bar">6</p></div>
 		</section>
 
 
@@ -96,6 +101,13 @@
     -ms-transform:  translate(200px,0px)  rotate(180deg) ;
   }
 }
+
+
+-webkit-transition: all 1s linear;
+-moz-transition: all 1s linear;
+-ms-transition: all 1s linear;
+-o-transition: all 1s linear;
+transition: all 1s linear;
 --> 
 
 
