--- a/www/pages/transitions.html
+++ b/www/pages/transitions.html
@@ -30,85 +30,18 @@
    <div class="box5"><p class="bar">5</p></div>
    <div class="box6"><p class="bar">6</p></div>
 		</section>
-
-
-
-<!--
-.element-animation{
-  animation: animationFrames linear 2s;
-  animation-iteration-count: infinite;
-  transform-origin: 50% 50%;
-  animation-fill-mode:forwards; /*when the spec is finished*/
-  -webkit-animation: animationFrames linear 2s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-transform-origin: 50% 50%;
-  -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
-  -moz-animation: animationFrames linear 2s;
-  -moz-animation-iteration-count: infinite;
-  -moz-transform-origin: 50% 50%;
-  -moz-animation-fill-mode:forwards; /*FF 5+*/
-  -o-animation: animationFrames linear 2s;
-  -o-animation-iteration-count: infinite;
-  -o-transform-origin: 50% 50%;
-  -o-animation-fill-mode:forwards; /*Not implemented yet*/
-  -ms-animation: animationFrames linear 2s;
-  -ms-animation-iteration-count: infinite;
-  -ms-transform-origin: 50% 50%;
-  -ms-animation-fill-mode:forwards; /*IE 10+*/
-}
-
-@keyframes animationFrames{
-  0% {
-    transform:  translate(0px,0px)  rotate(0deg) ;
-  }
-  100% {
-    transform:  translate(200px,0px)  rotate(180deg) ;
-  }
-}
-
-@-moz-keyframes animationFrames{
-  0% {
-    -moz-transform:  translate(0px,0px)  rotate(0deg) ;
-  }
-  100% {
-    -moz-transform:  translate(200px,0px)  rotate(180deg) ;
-  }
-}
-
-@-webkit-keyframes animationFrames {
-  0% {
-    -webkit-transform:  translate(0px,0px)  rotate(0deg) ;
-  }
-  100% {
-    -webkit-transform:  translate(200px,0px)  rotate(180deg) ;
-  }
-}
-
-@-o-keyframes animationFrames {
-  0% {
-    -o-transform:  translate(0px,0px)  rotate(0deg) ;
-  }
-  100% {
-    -o-transform:  translate(200px,0px)  rotate(180deg) ;
-  }
-}
-
-@-ms-keyframes animationFrames {
-  0% {
-    -ms-transform:  translate(0px,0px)  rotate(0deg) ;
-  }
-  100% {
-    -ms-transform:  translate(200px,0px)  rotate(180deg) ;
-  }
-}
-
-
--webkit-transition: all 1s linear;
--moz-transition: all 1s linear;
--ms-transition: all 1s linear;
--o-transition: all 1s linear;
-transition: all 1s linear;
---> 
+<hr>
+<!-- opdracht 6 -->
+<section>
+ <h3>Cards Animation</h3>
+ <div class="card_container">
+  <div class="op66 opdra1"><p>Made by groep 3</p></div>
+  <div class="op66 opdra2"><p>made by Adrienn F</p></div>
+  <div class="op66 opdra3"><p>Made by Leotiene & Zytona </p></div>
+  <div class="op66 opdra4"><p>Made by Charity </p></div>
+  <div class="op66 opdra5"><p>Last not least Bergduivel </p></div>
+ </div>
+</section>
 
 
 
