--- a/www/pages/transitions.html
+++ b/www/pages/transitions.html
@@ -13,10 +13,10 @@
 		<header>
 			<nav>
 				<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="pseudo.html">Pseudo</a></li>
-				<li><a href="Flexbox.html">FlexBox</a></li>
-				<li><a href="grid.html">Grid</a></li>
+				<li><a href="index.html" title="I bring you home">Home</a></li>
+				<li><a href="pseudo.html" title="I bring you new page">Pseudo</a></li>
+				<li><a href="Flexbox.html" title="FlexBox en more">FlexBox</a></li>
+				<li><a href="grid.html" title="In de opmaak">Grid</a></li>
 				</ul>
 			</nav>
 		</header>
